 * #698 (KernelSmoothing() as a factory)
 * #786 (Bug in sensitivity analysis)
 * #813 (Error when multiplying a Matrix by a SymmetricMatrix)
 * #815 (ConditionedNormalProcess test fails randomly)
 * #820 (Python distribution fails randomly when computing the PDF over a sample)
 * #822 (Incorect Matrix / point operations with cast)
 * #824 (Confusing behavior of NumericalSample::sort)
 * #830 (more optim algos examples)
 * #837 (TruncatedDistribution::setParameter segfaults)
 * #838 (Symmetry of SymmetricMatrix not always enforced)
 * #841 (Better CovarianceModelCollection in Python)
 * #842 (Better ProcessCollection in Python)

== 1.7 release (2016-01-27) == #release-1.7

=== Library ===

==== Major changes ====
 * Optimization API rework
 * New parametrization of covariance models
 * Changed behaviour of ExponentialCauchy
 * KrigingAlgorithm rework

==== New classes ====
 * OptimizationSolver, OptimizationProblem
 * SLSQP, LBFGS, NelderMead optimization algorithms from NLopt
 * DiracCovarianceModel, TensorizedCovarianceModel
 * HMatrixParameters: support class for HMat
 * KarhunenLoeveP1Factory: Karhunen-Loeve decomposition of a covariance model using a P1 Lagrange interpolation
 * GeneralizedLinearModelAlgorithm, GeneralizedLinearModelResult: estimate parameters of a generalized linear model
 * BipartiteGraph: red/black graph
 * CumulativeDistributionNetwork: high dimensional distribution using a collection of (usually) small dimension
   distributions and a bipartite graph describing the interactions between these distributions
 * AdaptiveStieltjesAlgorithm: orthonormal polynomials wrt arbitrary measures using adaptive integration
 * MaximumLikelihoodFactory: generic maximum likelihood distribution estimation service

==== API changes ====
 * Removed BoundConstrainedAlgorithm class
 * Removed NearestPointAlgorithm class
 * Deprecated AbdoRackwitz|Cobyla|SQP::[gs]etLevelFunction|[gs]etLevelValue