@@ -13,3 +13,4 @@ aSample with bad entries (see log)= class=NumericalSample name=a sample with bad
 aSample with bad entries (see log)= class=NumericalSample name=a sample with bad entries implementation=class=NumericalSampleImplementation name=a sample with bad entries size=2 dimension=4 description=[data_0,data_1,data_2,data_3] data=[[-1.2,2.3,3.4,-4.5],[0.9,9.8,8.4,5.4]]
 aSample with missing entries (see log)= class=NumericalSample name=a sample with missing entries implementation=class=NumericalSampleImplementation name=a sample with missing entries size=2 dimension=4 description=[data_0,data_1,data_2,data_3] data=[[-1.2,2.3,3.4,-4.5],[6.5,9,7.3,-3.7]]
 aSample with missing entries (see log)= class=NumericalSample name=a sample with missing entries implementation=class=NumericalSampleImplementation name=a sample with missing entries size=2 dimension=4 description=[data_0,data_1,data_2,data_3] data=[[-1.2,2.3,3.4,-4.5],[6.5,9,7.3,-3.7]]
+aSample with special chars= class=NumericalSample name=sample.csv implementation=class=NumericalSampleImplementation name=sample.csv size=2 dimension=3 description=[X1,X2!()#{}%&<=>^$+-*./:\|`?,X3[unit]] data=[[5.6,-6.7,7.8],[-0.1,3.2,7.5]]
